discussion/kv_engine/157877/157877_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Move to event-driven checkpoint removal task

Separates routine removal of unreffed checkpoints from "emergency"
memory recovery methods like cursor dropping and expelling.

Now, once a checkpoint becomes unreferenced, the checkpoint removal
task can be notified. The task tracks vbs to visit in a VBReadyQueue,
so does not need to scan every vb each run.

Change-Id: Ibf12fe5ca11ffd4daf9fcd2de3ae9e7010256e61

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-07-23 15:51:41.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-23 16:15:56.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37992/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_test.cc(26): fatal error C1083: Cannot open include file: "checkpoint_remover.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37992/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10793/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:23:10: error: "checkpoint_remover.h" file not found [clang-diagnostic-error]
#include "checkpoint_remover.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10793/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:23:10:
error: "checkpoint_remover.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10793/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11468/ : FAILURE

Compile error at [2021-07-23T15:56:39.208Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11468/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/383/ : FAILURE

Compile error at [2021-07-23T16:00:50.971Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/383/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/411/ : FAILURE

Compile error at [2021-07-23T16:09:19.834Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/411/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12382/ : FAILURE

Compile error at [2021-07-23T16:08:07.436Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12382/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12559/ : FAILURE

Compile error at [2021-07-23T16:11:57.324Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12559/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20456/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12907/ : FAILURE

Compile error at [2021-07-23T16:11:32.859Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12907/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9452/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32390/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
